# discoverymanager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
inc/: discoverymanager.hpp  error.hpp  error.hpp~  extension_finder.hpp  extension_finder.hpp~  global_defs.h  global_defs.hpp~  global_defs.h~  help.hpp
src/: discoverymanager.cpp  error.cpp  error.cpp~  extension_finder.cpp  extension_finder.cpp~  help.cpp  help.cpp~  main.cpp  main.cpp~  treasy.cpp~
